Use flex on main as column.  Prevents white space

--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -9,10 +9,10 @@
 html {
   box-sizing: border-box;
 }
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
-
 
 body {
   margin: 0;
@@ -21,6 +21,11 @@ body {
   overflow-x: hidden;
   max-width: 100vw;
   font-family: $family-sans-serif;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
 }
 
 p {
